k8s/apps/orion/add-dummy-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion
spec:
  template:
    spec:
      volumes:
      - name: dummy-volume
        emptyDir: {}
