k8s/apps/orion/base.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: orion
  name: orion
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 1027
    nodePort: 8080
  selector:
    app: orion

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orion
  name: orion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion
  template:
    metadata:
      labels:
        app: orion
    spec:
      containers:
      - command: ["orionld"]
        args: ["-fg", "-multiservice", "-ngsiv1Autocast", "-dbhost", "mongodb",
               "-logLevel", "DEBUG"]
        image: "fiware/orion-ld:0.8.0"
        imagePullPolicy: IfNotPresent
        name: orion
        ports:
        - containerPort: 1026
          name: http
