k8s/apps/orion/sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orion
  name: orion
spec:
  template:
    metadata:
      labels:
        app: orion
    spec:
      containers:
      - image: "envoyproxy/envoy:v1.19.3"
        imagePullPolicy: IfNotPresent
        name: envoy
        ports:
        - containerPort: 1027
          name: http
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
